refactor(): 重构了Collection模块以提升性能；调整了部分不规范的设计